--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.retrofit2:retrofit:<VERSION>'
     implementation("com.squareup.retrofit2:converter-jackson:2.9.0")
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
