Added server connections

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,18 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.squareup.retrofit2:retrofit:<VERSION>'
-    implementation("com.squareup.retrofit2:converter-jackson:2.9.0")
+    //DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+//Retrofit
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+//OkHttp
+    def okhttp_version = "4.10.0"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
+
 }
