--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     //DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "io.coil-kt:coil:1.1.1"
+
 
 //Retrofit
     def retrofit_version = "2.9.0"
